update readme + notebook + summary.md

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -46,7 +46,7 @@
         "import pandas as pd\n",
         "import sys\n",
         "\n",
-        "# Add src/ to path for imports\n",
+        "# update python src path\n",
         "ROOT = Path().resolve().parent\n",
         "if str(ROOT / \"src\") not in sys.path:\n",
         "    sys.path.insert(0, str(ROOT / \"src\"))\n",
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -1228,10 +1228,10 @@
       ],
       "source": [
         "\n",
-        "ammount_by_country = df.groupby(\"country\")[\"amount\"].sum()\n",
+        "amount_by_country = df.groupby(\"country\")[\"amount\"].sum()\n",
         "\n",
-        "print(ammount_by_country)\n",
-        "fig = bar_sorted(ammount_by_country, \"country\", \"amount\", \"Total amount by Country\")\n",
+        "print(amount_by_country)\n",
+        "fig = bar_sorted(amount_by_country, \"country\", \"amount\", \"Total amount by Country\")\n",
         "save_fig(fig, figs_path / \"amount_by_country.png\")\n",
         "fig\n"
       ]
@@ -1254,7 +1254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -2115,11 +2115,11 @@
         }
       ],
       "source": [
-        "ammount_by_weekday = df.groupby(\"dow\", dropna=False)[\"amount\"].sum().reset_index()\n",
-        "print(ammount_by_weekday)\n",
+        "amount_by_weekday = df.groupby(\"dow\", dropna=False)[\"amount\"].sum().reset_index()\n",
+        "print(amount_by_weekday)\n",
         "\n",
-        "fig = time_line(ammount_by_weekday, \"dow\", \"amount\", \"week day trend\")\n",
-        "save_fig(fig, figs_path / \"revenue_trend_monthly.png\")\n",
+        "fig = time_line(amount_by_weekday, \"dow\", \"amount\", \"week day trend\")\n",
+        "save_fig(fig, figs_path / \"amount_trend_weekday.png\")\n",
         "fig\n"
       ]
     },
@@ -2127,7 +2127,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "A: we can see that the ammount of orders in tuesday is 0 , we can not build an assumption becasue there are orders without date maybe some of them are in tuesday"
+        "A: we can see that the amount of orders in tuesday is 0 , we can not build an assumption becasue there are orders without date maybe some of them are in tuesday"
       ]
     },
     {
@@ -2140,7 +2140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -2995,7 +2995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -3032,14 +3032,14 @@
         "## Summary\n",
         "\n",
         "Key findings:\n",
-        "1. the ammount for AE country was 0 as all amount we have is for SA\n",
+        "1. the amount for AE country was 0 as all amount we have is for SA\n",
         "2. we are not welling to spend on tuesday\n",
-        "3. we have an outlier which affect in the ammount of stats\n",
+        "3. we have an outlier which affect in the amount of stats\n",
         "\n",
         "**Caveats:**\n",
         "- we dont have enough data for AE country \n",
-        "- some dates were missing and it has a significant ammount\n",
-        "- we cannot estimate the ammount distribution using only 5 rows, the stats will be soo sensitive and not reliable\n"
+        "- some dates were missing and it has a significant amount\n",
+        "- we cannot estimate the amount distribution using only 5 rows, the stats will be soo sensitive and not reliable\n"
       ]
     }
   ],
